make exercise up to Day 4

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -43,6 +43,22 @@ options={
 <script src="{{ relative_root_path }}/assets/js/katex-auto-render.min.js" onload="renderMathInElement(document.body, options)"></script>
 {% endif %}
 
+<!-- Add mathjax -->
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    extensions: ["tex2jax.js"],
+    jax: ["input/TeX", "output/HTML-CSS"],
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+      processEscapes: true
+    },
+    "HTML-CSS": { fonts: ["TeX"] }
+  });
+</script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<!-- End mathjax -->
+
 {%- comment -%}
 AnchorJS: A JavaScript utility for adding deep anchor links
 https://github.com/bryanbraun/anchorjs
